BookInfoRetriever generate .ttl